# aisearch

./: .env.example  .env.good_results  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  Dockerfile_api  Dockerfile_base  Dockerfile_deps  Dockerfile_dev  Dockerfile_main  Dockerfile_prod  Dockerfile_queue  Dockerfile_search_deps  Dockerfile_search_main  Dockerfile_search_test  Dockerfile_test  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  http_test.py  mypy.ini  pre_launch.py  pyproject.toml  pytest.ini  ruff.toml  xlsx_to_parquet.py
app/: main.py  scheduler.py
app/common/: auth.py  database.py  fastapi_utils.py  logger.py  providers.py  version.py
app/common/exceptions/: exceptions.py
app/common/filters/: filters.py
app/common/repositories/: interfaces.py  repository.py
app/common/storages/: redis.py  sync_redis.py
app/config/: conf.json  gunicorn_conf.py  os_index.json
app/domain/: exception_handler.py  exceptions.py
app/domain/adapters/: confluence.py  edu.py  google.py  interfaces.py
app/domain/filters/: knowledge_feedback.py  rating.py  search_feedback.py  search_request.py
app/domain/repositories/: glossary.py  interfaces.py  knowledge_feedback.py  search_feedback.py  search_request.py
app/domain/schemas/: enums.py  glossary.py  healthcheck.py  knowledge_base.py  knowledge_feedback.py  open_search.py  search_feedback.py  search_request.py  semantic_search.py
app/infrastructure/: ioc.py  providers.py
app/infrastructure/adapters/: bm25.py  edu.py  (+9 more)
app/services/: feedback.py  glossary.py  hybrid_search_orchestrator.py  hybrid_search_service.py  interfaces.py  knowledge_base.py  requests.py  semantic_search.py  taskmanager.py  updater.py
app/settings/: conf.json  config.py  field_mapping.json  gunicorn_conf.py  logging_config.py  os_index.json
buildeps/api/: pyproject.toml
buildeps/queue/: pyproject.toml
buildeps/search/: pyproject.toml
compose_full/: docker-compose.local.yml  docker-compose.yml
compose_updater/: docker-compose.local.yml  docker-compose.yml
docs/agent/: deduplicated_excel_confluence_export.md  exact_filtering_pipeline.md  glossary-sync.md  search_cache_data_versioning.md  search_filters_api_contract.md  search_fusion_and_final_rerank.md  search_runtime_options.md  token_filtering_pipeline.md
info/db/: db_prototype.drawio  structure.sql
scripts/: api_killer.sh  parquet_to_xlsx.py  wait_for_services.sh  xlsx_to_parquet.py
tests/: conftest.py  utils.py
tests/api/: test_base_api.py
tests/fixtures/: containers.py  settings.py
tests/mocks/: edu.py  kb_from_edu.xlsx  mock_confluence_adapter.py  mock_edu_adapter.py  mock_google_tables_adapter.py  prelaunch_updater_correct_result.xlsx  vio_from_edu.xlsx
tests/scripts/: test_pre_launch.py  test_updater.py
tests/services/: test_knowledge_base_service.py
tests/unit/: test_deduplicated_excel_export.py  test_edu_confluence_upload.py  test_exact_filters.py  test_hybrid_search_service_filters.py  test_hybrid_settings_validation.py  test_milvus_array_support.py  test_open_search_serialization.py  test_opensearch_settings.py  test_orchestrator_filter_queries.py  test_orchestrator_fusion_modes.py  test_orchestrator_opensearch_body.py  test_orchestrator_presearch_pipeline.py  test_prepare_dataframe_tokens.py  test_reranker_pairs_fields.py  test_search_cache_version.py  test_search_request_dto.py  test_search_request_dto_filters.py  test_search_settings.py  test_token_filter_settings.py  test_token_filters.py  test_updater_cache_versioning.py  test_updater_deduplicated_export.py
(+88 files in other folders)
