[project]
name = "aisearch-api"
version = "0.1.0"
description = ""
authors = [{ name = "emias" }]
requires-python = ">=3.12,<4.0"
dependencies = [
    "dishka>=1.6.0,<2",
    "pydantic>=2.11.7",
    "structlog>=25.4.0,<26",
    "redis>=6.2.0,<7",
    "pydantic-settings>=2.10.1",
    "fastapi[all]>=0.115.12,<0.116",
    "slowapi>=0.1.9,<0.2",
    "toml>=0.10.2,<0.11",
    "uvicorn-worker>=0.3.0,<0.4",
    "celery>=5.5.3,<6",
]