[project]
name = "aisearch-queue"
version = "0.1.0"
description = ""
authors = [{ name = "emias" }]
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.6.0,<2",
    "pydantic>=2.11.7",
    "structlog>=25.4.0,<26",
    "redis>=6.2.0,<7",
    "celery>=5.5.3,<6",
    "pydantic-settings>=2.10.1"
]